--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-10-01  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* profiler.el (profiler-sampling-interval): Change default back to 1.
+	See Stefan Monnier in
+	<http://lists.gnu.org/archive/html/emacs-devel/2012-09/msg00863.html>.
+
 2012-10-01  Fabián Ezequiel Gallina  <fgallina@cuca>
 
 	Shell output catching a la gud-gdb.
