--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-10-01  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* emacs-lisp/bytecomp.el (byte-compiler-abbreviate-file): New function.
+	(byte-compile-warning-prefix, byte-compile-file): Use it (bug#12508).
+
 2012-10-01  Karl Fogel  <kfogel@red-bean.com>
 
 	* bookmark.el (bookmark-version-control): Give tags in the
@@ -19,8 +24,8 @@
 
 	Shell output catching a la gud-gdb.
 	* progmodes/python.el (python-shell-fetch-lines-in-progress)
-	(python-shell-fetch-lines-string, python-shell-fetched-lines): New
-	Vars.
+	(python-shell-fetch-lines-string, python-shell-fetched-lines):
+	New Vars.
 	(python-shell-fetch-lines-filter): New function.
 	(python-shell-send-string-no-output): Use them.
 
@@ -51,12 +56,12 @@
 	version of the original ChangeLog can be found in the commit log.
 
 	* textmodes/reftex-auc.el: Move `provide' call to bottom of file.
-	(reftex-arg-cite): Use `reftex-cite-key-separator'.  Correctly
-	handle new value type returned by `reftex-citation'.
+	(reftex-arg-cite): Use `reftex-cite-key-separator'.
+	Correctly handle new value type returned by `reftex-citation'.
 
 	* textmodes/reftex-cite.el (reftex-create-bibtex-file): Make sure
-	that entries with whitespace at various places are found.  Doc
-	fix. Include entries that are cross-referenced from cited entries.
+	that entries with whitespace at various places are found.
+	Doc fix. Include entries that are cross-referenced from cited entries.
 	Include @String definitions in the resulting bib file.  Add header
 	and footer defined in `reftex-create-bibtex-header' and
 	`reftex-create-bibtex-footer'.
@@ -75,10 +80,10 @@
 	(reftex-extract-bib-entries-from-thebibliography): Match \bibitem
 	entries with spaces or tabs in front of arguments.
 	(reftex-pop-to-bibtex-entry, reftex-extract-bib-entries)
-	(reftex-parse-bibtex-entry, reftex-create-bibtex-file): Match
-	entries containing numbers and symbol constituents.
-	(reftex-do-citation, reftex-figure-out-cite-format): Use
-	`reftex-cite-key-separator'.
+	(reftex-parse-bibtex-entry, reftex-create-bibtex-file):
+	Match entries containing numbers and symbol constituents.
+	(reftex-do-citation, reftex-figure-out-cite-format):
+	Use `reftex-cite-key-separator'.
 
 	* textmodes/reftex-dcr.el: Move provide statement to end of file.
 	(reftex-mouse-view-crossref): Explain why point is set.
@@ -98,21 +103,21 @@
 	prevents fontification of quoted content.
 	(reftex-index-phrases-mode): Use it.
 
-	* textmodes/reftex-parse.el (reftex-parse-from-file): Move
-	backward one char if a `\' was matched after a section macro.
+	* textmodes/reftex-parse.el (reftex-parse-from-file):
+	Move backward one char if a `\' was matched after a section macro.
 	(reftex-parse-from-file): Use beginning of match instead of end as
 	bound.
 
 	* textmodes/reftex-ref.el: Adapt creation of
 	`reftex-<package>-<macro>' functions to new structure of
 	`reftex-ref-style-alist'.
-	(reftex-reference): Use `reftex-ref-style-list' function.  Adapt
-	to new structure of `reftex-ref-style-alist'.  Prompt for a
+	(reftex-reference): Use `reftex-ref-style-list' function.
+	Adapt to new structure of `reftex-ref-style-alist'.  Prompt for a
 	reference macro if `reftex-ref-macro-prompt' is non-nil.
 	(reftex-reference): Pass refstyle to `reftex-format-special'.
 	Determine reference macro by looking at
-	`reftex-ref-style-default-list' and `reftex-ref-style-alist'.  Use
-	only one special format function.
+	`reftex-ref-style-default-list' and `reftex-ref-style-alist'.
+	Use only one special format function.
 	(reftex-varioref-vref, reftex-fancyref-fref)
 	(reftex-fancyref-Fref): Remove definitions.  The functions are now
 	generated from `reftex-ref-style-alist'.
@@ -132,8 +137,8 @@
 	through reference styles.  Add `p' for switching between number
 	and page reference types.
 
-	* textmodes/reftex-toc.el (reftex-re-enlarge): Call
-	`enlarge-window' only if there is something to do because in Emacs
+	* textmodes/reftex-toc.el (reftex-re-enlarge):
+	Call `enlarge-window' only if there is something to do because in Emacs
 	the horizontal version throws an error even if the parameter is 0.
 
 	* textmodes/reftex-vars.el (reftex-label-alist): Doc fix.
@@ -142,21 +147,21 @@
 	string.  Adapt to new name.
 	(reftex-ref-style-alist): Change structure so that it is not
 	possible to use multiple different package names within a style.
-	Remove the symbols for symbols for macro type distinction.  Add
-	characters for macro selection.
+	Remove the symbols for symbols for macro type distinction.
+	Add characters for macro selection.
 	(reftex-ref-macro-prompt, reftex-create-bibtex-header)
 	(reftex-create-bibtex-footer): New variables.
 	(reftex-format-ref-function): Mention third argument of special
 	format function.
-	(reftex-ref-style-alist, reftex-ref-style-default-list): New
-	variables.
+	(reftex-ref-style-alist, reftex-ref-style-default-list):
+	New variables.
 	(reftex-vref-is-default, reftex-fref-is-default): Adapt doc string
 	to new implementation.  Mark as obsolete.  Add compatibility code
 	for honoring the variable values in case they are set.
-	(reftex-cite-format-builtin, reftex-bibliography-commands): Add
-	support for ConTeXt.
-	(reftex-format-ref-function, reftex-format-cite-function): Fix
-	custom type.
+	(reftex-cite-format-builtin, reftex-bibliography-commands):
+	Add support for ConTeXt.
+	(reftex-format-ref-function, reftex-format-cite-function):
+	Fix custom type.
 	(reftex-cite-key-separator): New variable.
 
 	* textmodes/reftex.el (reftex-syntax-table-for-bib)
@@ -166,8 +171,8 @@
 	work.
 	(reftex-in-comment): Do not error out if `comment-start-skip' is
 	not set.  Deal correctly with escaped comment characters.
-	(reftex-tie-multifile-symbols): Add doc string.  Initialize
-	`reftex-ref-style-list'.
+	(reftex-tie-multifile-symbols): Add doc string.
+	Initialize `reftex-ref-style-list'.
 	(reftex-untie-multifile-symbols): Add doc string.
 	(reftex-add-index-macros): Doc fix.
 	(reftex-ref-style-activate, reftex-ref-style-toggle)
@@ -188,8 +193,8 @@
 2012-09-30  Fabián Ezequiel Gallina  <fgallina@cuca>
 
 	Enhancements for triple-quote string syntax.
-	* progmodes/python.el (python-syntax-propertize-function): Match
-	both quote cases in one regexp.
+	* progmodes/python.el (python-syntax-propertize-function):
+	Match both quote cases in one regexp.
 	(python-syntax-stringify): Handle matches properly.
 
 2012-09-30  Juri Linkov  <juri@jurta.org>
@@ -223,10 +228,10 @@
 
 	In buffer display functions handle window-height/window-width
 	alist entries.  Suggested by Juri Linkov as fix for Bug#1806.
-	* window.el (window--display-buffer): New argument ALIST.  Obey
-	window-height and window-width alist entries.
-	(window--try-to-split-window): New argument ALIST.  Bind
-	window-combination-limit to t when the window's size shall be
+	* window.el (window--display-buffer): New argument ALIST.
+	Obey window-height and window-width alist entries.
+	(window--try-to-split-window): New argument ALIST.
+	Bind window-combination-limit to t when the window's size shall be
 	changed and window-combination-limit equals `window-size'.
 	(display-buffer-in-atom-window)
 	(display-buffer-in-major-side-window)
@@ -249,8 +254,8 @@
 	temp-buffer-resize-regexps.  Use fit-frame-to-buffer instead of
 	temp-buffer-resize-frames.
 
-	* dired.el (dired-mark-pop-up): Call
-	display-buffer-below-selected with a fit-window-to-buffer alist
+	* dired.el (dired-mark-pop-up):
+	Call display-buffer-below-selected with a fit-window-to-buffer alist
 	entry.
 
 2012-09-30  Chong Yidong  <cyd@gnu.org>
@@ -348,8 +353,8 @@
 
 2012-09-28  Leo Liu  <sdl.web@gmail.com>
 
-	* pcomplete.el (pcomplete-show-completions): Use
-	minibuffer-message to make pcomplete usable in minibuffer.
+	* pcomplete.el (pcomplete-show-completions):
+	Use minibuffer-message to make pcomplete usable in minibuffer.
 
 	* ido.el (ido-set-matches-1): Fix 2012-09-11 change.
 
