--- a/etc/NEWS
+++ b/etc/NEWS
@@ -160,6 +160,8 @@ On encountering a fatal error, Emacs now outputs a textual description
 of the fatal signal, and a short backtrace on platforms like glibc
 that support backtraces.
 
+** `message-log-max' now defaults to 1000, not 100.
+
 ---
 ** If your Emacs was built from a bzr checkout, the new variable
 `emacs-bzr-version' contains information about the bzr revision used.
