--- a/nt/ChangeLog
+++ b/nt/ChangeLog
@@ -1,3 +1,10 @@
+2012-10-01  Eli Zaretskii  <eliz@gnu.org>
+
+	* preprep.c (RVA_TO_PTR): Use 'unsigned char *' instead of
+	'void *', for pointer arithmetics.
+	(OFFSET_TO_RVA, RVA_TO_OFFSET, RVA_TO_SECTION_OFFSET): Enclose all
+	macro arguments in parentheses.
+
 2012-09-30  Eli Zaretskii  <eliz@gnu.org>
 
 	* makefile.w32-in ($(TRES)): Use $(EMACS_MANIFEST).
