--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-10-01  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* fns.c (check_hash_table, get_key_arg, maybe_resize_hash_table)
+	(sweep_weak_table): Remove redundant prototypes.
+
 2012-10-01  Fabrice Popineau  <fabrice.popineau@gmail.com>
 
 	* emacs.c: Move the inclusion of TERM_HEADER after including
