--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-10-01  Eli Zaretskii  <eliz@gnu.org>
+
+	* w32proc.c (timer_loop): Fix code that waits for timer
+	expiration, to avoid high CPU usage.
+
 2012-10-01  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* fns.c (check_hash_table, get_key_arg, maybe_resize_hash_table)
