--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,22 @@
+2012-10-01  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Fix a malloc race condition involving strsignal.
+	A signal can arrive in the middle of a malloc, and Emacs's signal
+	handler can invoke strsignal, which can invoke malloc, which is
+	not portable.  This race condition bug makes Emacs hang on GNU/Linux.
+	Fix it by altering the signal handler so that it does not invoke
+	strsignal.
+	* emacs.c (shut_down_emacs): Use safe_strsignal, not strsignal.
+	* process.c (status_message): Use const pointer, in case strsignal
+	is #defined to safe_strsignal.
+	* sysdep.c (sys_siglist, init_signals): Always define and
+	initialize a substitute sys_siglist if the system does not define
+	one, even if HAVE_STRSIGNAL.
+	(safe_strsignal): Rename from strsignal.  Always define,
+	using sys_siglist.  Return a const pointer.
+	* syssignal.h (safe_strsignal): New decl.
+	(strsignal) [!HAVE_STRSIGNAL]: Define in terms of safe_strsignal.
+
 2012-10-01  Eli Zaretskii  <eliz@gnu.org>
 
 	* w32proc.c (timer_loop): Fix code that waits for timer
