Restore Version headers removed in last CEDET merge. These are needed for ELPA dependencies.
* srecode.el, ede.el: Restore Version header.
* emacs-lisp/eieio.el: Restore Version header.

--- a/lisp/cedet/ChangeLog
+++ b/lisp/cedet/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-02  Chong Yidong  <cyd@gnu.org>
+
+	* srecode.el, ede.el: Restore Version header.
+
 2012-10-01  Chong Yidong  <cyd@gnu.org>
 
 	* semantic/bovine/c-by.el: Regenerate.
