--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-10-02  Chong Yidong  <cyd@gnu.org>
+
+	* emacs-lisp/eieio.el: Restore Version header.
+
 2012-10-02  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* vc/diff-mode.el (diff--auto-refine-data): New var.
