Count overruns when profiling; change units to ns.
* lisp/profiler.el (profiler-sampling-interval): Change units
from ms to ns, multiplying the default by 1000000 so that
it remains 1 ms.
(profiler-report-cpu-line-format): Give enough room for
the maximum counters on 64-bit hosts.
(profiler-report-render-calltree-1): Call them "CPU samples",
not "Time (ms)", since they are not milliseconds now (and
never really were).
* src/profiler.c (handle_profiler_signal): Count sampling intervals, not ms.
Give extra weight to samples after overruns, to attempt to count
the time more accurately.
(setup_cpu_timer): Change sampling interval units from ms to ns, since
the underlying primitives nominally do ns.
(Fprofiler_cpu_start): Document the change.  Mention that
the sampling intervals are only approximate.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,15 @@
+2012-10-02  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Change sampling interval units from ms to ns.
+	* profiler.el (profiler-sampling-interval): Change units
+	from ms to ns, multiplying the default by 1000000 so that
+	it remains 1 ms.
+	(profiler-report-cpu-line-format): Give enough room for
+	the maximum counters on 64-bit hosts.
+	(profiler-report-render-calltree-1): Call them "CPU samples",
+	not "Time (ms)", since they are not milliseconds now (and
+	never really were).
+
 2012-10-02  Sergio Durigan Junior  <sergiodj@riseup.net>  (tiny change)
 
 	* net/eudcb-bbdb.el (eudc-bbdb-format-record-as-result): Fix
