--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,8 @@
+2012-10-02  Glenn Morris  <rgm@gnu.org>
+
+	* maintaining.texi (VC Directory Commands):
+	Remove duplicate `q' entry.  (Bug#12553)
+
 2012-09-30  Chong Yidong  <cyd@gnu.org>
 
 	* killing.texi (Rectangles): Document copy-rectangle-as-kill.
