--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-10-02  Chong Yidong  <cyd@gnu.org>
+
+	* progmodes/hideif.el (hif-lookup, hif-defined): Handle
+	semantic-c-takeover-hideif.
+
 2012-10-02  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Change sampling interval units from ms to ns.
