--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-10-03  Martin Rudalics  <rudalics@gmx.at>
+
+	* emacs-lisp/debug.el (debug): When quitting the debugger window
+	restore current buffer (Bug#12502).
+
 2012-10-02  Chong Yidong  <cyd@gnu.org>
 
 	* progmodes/hideif.el (hif-lookup, hif-defined): Handle
