--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-10-03  Glenn Morris  <rgm@gnu.org>
+
+	* help-macro.el (three-step-help):
+	Revert 2012-09-29 change.  (Bug#12567)
+
 2012-10-03  Martin Rudalics  <rudalics@gmx.at>
 
 	* menu-bar.el (kill-this-buffer): Don't do anything when
