--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -4,6 +4,17 @@
 	to avoid similar races.
 	* keyboard.c (pending_signals): Now bool, not int.
 
+	Port timers to OpenBSD, plus check for timer failures.
+	OpenBSD problem reported by Han Boetes.
+	* profiler.c (setup_cpu_timer): Check for failure of timer_settime
+	and/or setitimer.
+	(Fprofiler_cpu_stop): Don't assume HAVE_SETITIMER.
+	* syssignal.h (HAVE_ITIMERSPEC): New macro.  This is for platforms
+	like OpenBSD, which has timer_settime but does not declare it.
+	OpenBSD does not define SIGEV_SIGNAL, so use that when deciding
+	whether to use itimerspec-related primitives.  All uses of
+	HAVE_TIMER_SETTIME replaced with HAVE_ITIMERSPEC.
+
 2012-10-02  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* profiler.c (handle_profiler_signal): Fix a malloc race
