--- a/lisp/erc/ChangeLog
+++ b/lisp/erc/ChangeLog
@@ -1,3 +1,8 @@
+2012-10-04  Julien Danjou  <julien@danjou.info>
+
+	* erc-desktop-notifications.el: Rename from erc-notifications to
+	avoid clash with 8+3 filename format and erc-notify.el.
+
 2012-09-25  Chong Yidong  <cyd@gnu.org>
 
 	* erc.el (erc-send-command): Use define-obsolete-function-alias.
