--- a/etc/NEWS
+++ b/etc/NEWS
@@ -858,6 +858,7 @@ See the "Face Attributes" section of the Elisp manual.
 *** `macro-declaration-function' (use `macro-declarations-alist').
 *** `window-system-version'
 *** `dired-pop-to-buffer' (use `dired-mark-pop-up')
+*** `query-replace-interactive'
 
 
 * Changes in Emacs 24.3 on non-free operating systems
