--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -8347,7 +8347,8 @@
 
 2012-03-18  Leo Liu  <sdl.web@gmail.com>
 
-	* net/rcirc.el (rcirc-cmd-quit): Allow quiting all servers with prefix.
+	* net/rcirc.el (rcirc-cmd-quit): Allow quitting all servers with
+	prefix.
 
 2012-03-17  Eli Zaretskii  <eliz@gnu.org>
 
