--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,11 @@
+2012-10-05  Glenn Morris  <rgm@gnu.org>
+
+	* color.el (color-name-to-rgb, color-rgb-to-hex)
+	(color-hue-to-rgb, color-hsl-to-rgb, color-rgb-to-hsv)
+	(color-rgb-to-hsl, color-srgb-to-xyz, color-saturate-hsl)
+	(color-desaturate-hsl, color-desaturate-name, color-lighten-hsl)
+	(color-lighten-name, color-darken-hsl, color-darken-name): Doc fixes.
+
 2012-10-04  Glenn Morris  <rgm@gnu.org>
 
 	* emacs-lisp/timer.el (with-timeout): Add missing progn.  (Bug#12577)
