--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,7 @@
 2012-10-05  Glenn Morris  <rgm@gnu.org>
 
+	* net/newst-treeview.el (newsticker-group-move-feed): Doc fix.
+
 	* color.el (color-name-to-rgb, color-rgb-to-hex)
 	(color-hue-to-rgb, color-hsl-to-rgb, color-rgb-to-hsv)
 	(color-rgb-to-hsl, color-srgb-to-xyz, color-saturate-hsl)
